--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="assets/logoAdroAI.jpg" 
                     alt="Chiesa" 
                     style="height: 60px; vertical-align: middle; margin-right: 30px;">
-                Registri Parrocchiali
+                Registri Parrocchiali - Battesimi
             </h1>
             <div class="user-info" id="user-info">Caricamento...</div>
         </header>
